2010-08-19  Werner Koch  <wk@g10code.com>

	* dn.c (append_ucs2_value): Enlarge TMP buffer. Fixes bug#1269.

2010-08-02  Werner Koch  <wk@g10code.com>

	* reader.c (ksba_reader_set_release_notify): New.
	(ksba_reader_release): Call notify function.
	* reader.h (struct ksba_reader_s): Add NOTIFY_CB and NOTIFY_CB_VALUE.
	* writer.c (ksba_writer_set_release_notify): New.
	(ksba_writer_release): Call notify function.
	* writer.h (struct ksba_writer_s): Add NOTIFY_CB and NOTIFY_CB_VALUE.
	* ksba.h, libksba.vers, libksba.def: Add new functions.

2010-07-15  Werner Koch  <wk@g10code.com>

	* cms-parser.c (create_and_run_decoder): Add arg flags.
	(_ksba_cms_parse_enveloped_data_part_1): Handle NDEF recipientInfo
	sets.

	* ber-decoder.h (BER_DECODER_FLAG_FAST_STOP): New.
	* ber-decoder.c (_ksba_ber_decoder_decode): Add arg FLAGS.
	(decoder_next): Implement fast stop hack.

2010-05-06  Werner Koch  <wk@g10code.com>

	* gen-help.c, gen-help.h: New.
	* Makefile.am: Build asn1-gentables and ber-dump also when cross
	compiling.
	(asn1_gentables_SOURCES, asn1_gentables_LDADD)
	(asn1_gentables_CFLAGS): Remove.
	(asn1-gentables): New rule.
	(asn1-parse.c): Add gen-help.h as dependency.
	(EXTRA_DIST): Add gen-help.c and gen-help.h.
	* asn1-parse.y [BUILD_GENTOOLS]: Include gen-help.h instead of
	util.h and ksba.h.
	(ksba_asn_parse_file): Use gpg_error_from_syserror.
	* asn1-func.c [BUILD_GENTOOLS]: Include gen-help.h instead of
	util.h and ksba.h.
	(resolve_identifier): Avoid the alloca.
	* asn1-gentables.c: Include gen-help instead of util.h and ksba.h.
	(sort_string_table): Remove useless printing of the string table.

2010-01-22  Werner Koch  <wk@g10code.com>

	* util.c (ksba_calloc): Use gpg_er_set_errno.

	* ber-decoder.c (_ksba_ber_decoder_dump)
	(_ksba_ber_decoder_decode) [!HAVE_GETENV]: Set debug to 0.

2009-12-08  Marcus Brinkmann  <marcus@g10code.de>

	* src/Makefile.am (LTRCCOMPILE): Refactor with ...
	(RCCOMPILE): ... this new macro.  Add $(libksba_la_CPPFLAGS).