@@ -1,3 +1,8 @@
+2010-09-13  Werner Koch  <wk@g10code.com>
+
+	* asn1-gentables.c (DEVNULL_NAME): New.
+	(main): Use it for fopen.  Suggested by Carlo Bramix.
+
 2010-08-19  Werner Koch  <wk@g10code.com>
 
 	* dn.c (append_ucs2_value): Enlarge TMP buffer. Fixes bug#1269.
